--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ extra_javascript:
 hooks:
 - hack/mkdocs-copy-geps.py
 - hack/mkdocs-generate-conformance.py
+- hack/mkdocs_linking.py
 watch:
 - geps
 theme:
@@ -46,11 +47,17 @@ plugins:
   - awesome-pages
   - macros:
       include_dir: examples
-      j2_line_comment_prefix: "#$"
+
+      module_name: hack/mkdocs_main
+  # Do not add manual redirects here, they will be overwritten. Add them to 
+  # hack/redirect_map.json if needed in exceptional cases, but the mkdocs_linking.py
+  # hook and accompanying macro largely negate the need for manual redirects:
+  # https://github.com/kubernetes-sigs/gateway-api/pull/3999
   - redirects:
       redirect_maps:
         'guides/index.md': 'guides/getting-started/index.md'
         'ingress-nginx': 'guides/getting-started/migrating-from-ingress-nginx.md'
+        'guides/getting-started.md': 'guides/index.md'
         'concepts/gamma.md': 'mesh/index.md'
         'concepts/service-facets.md': 'mesh/service-facets.md'
         'concepts/guidelines.md': 'guides/api-design.md'
