--- a/nav.yml
+++ b/nav.yml
@@ -6,6 +6,7 @@ nav:
           - Troubleshooting and Status: concepts/troubleshooting.md
           - Conformance: concepts/conformance.md
           - Roles and Personas: concepts/roles-and-personas.md
+          - Security Considerations: concepts/security-considerations.md
           - Security Model: concepts/security-model.md
           - Tools: concepts/tooling.md
           - Use Cases: concepts/use-cases.md
